feat: migrate IDs from String/UUID to Long/BIGINT and configure Flyway migrations